Ensured all elements have the proper font. Added set colour to button styles to avoid blue button text on mobile.

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
 
 *, *:before, *:after {
     box-sizing: border-box;
+    font-family: 'Atkinson Hyperlegible', serif;
 }
 
 html {
@@ -30,7 +31,6 @@ html {
 }
 
 body {
-    font-family: "Atkinson Hyperlegible", serif;
     font-size: 1rem;
     line-height: 1.3125rem;
     padding-left: 2vw;
@@ -180,6 +180,7 @@ button {
     background: none;
     border: .15rem outset black;
     padding: .25rem .5rem;
+    color: #000;
 }
 
 button:hover,
